Solved first flex exercise 1. justify content and align items are properties under parent 2. justify content is for main axis and align items is for cross axis

--- a/foundations/flex/01-flex-center/style.css
+++ b/foundations/flex/01-flex-center/style.css
@@ -2,6 +2,9 @@
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 300px;
 }
 
